@@ -16,4 +16,4 @@ WORKDIR /app
 RUN ./gradlew build --stacktrace
 
 # We launch java to execute the jar, with good defauls intended for containers.
-CMD ["java", "-server", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-XX:InitialRAMFraction=2", "-XX:MinRAMFraction=2", "-XX:MaxRAMFraction=2", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=100", "-XX:+UseStringDeduplication", "-jar", "my-application.jar"]
+CMD ["java", "-server", "-jar", "build/libs/NotionAPI-all.jar"]
